--- a/index.css
+++ b/index.css
@@ -27,7 +27,7 @@
     height: 25px;
     background-color: rgba(72, 163, 0, 0.1);
     border-radius: 15px;
-    margin-bottom: 9dvh;
+    margin-bottom: 6dvh;
 }
 .progress-value{
     height: 100%;
@@ -41,11 +41,12 @@
     display: flex;
     align-items: center;
     overflow: hidden;
-  
+  transition: width 0.3s ease-in-out;
     
 }
 .progress-value span{
     padding-left: 20px;
+    min-width: max-content;
 }
 .error-label{
     color: #FF5151;
